4768.	[func]		By default, memory is no longer filled with tag values
			when it is allocated or freed; this improves
			performance but makes debugging of certain memory
			issues more difficult. "named -M fill" turns memory
			filling back on. (Building "configure
			--enable-developer", turns memory fill on by
			default again; it can then be disabled with
			"named -M nofill".) [RT #45123]

4767.	[func]		Add a new function, isc_buffer_printf(), which can be
			used to append a formatted string to the used region of
			a buffer. [RT #46201]

4766.	[cleanup]	Addresss Coverity warnings. [RT #46150]

4765.	[bug]		Address potential INSIST in dnssec-cds. [RT #46150]

4764.	[bug]		Address portability issues in cds system test.
			[RT #46214]

4763.	[contrib]	Improve compatibility when building MySQL DLZ
			module by using mysql_config if available.
			[RT #45558]

4762.	[func]		"update-policy local" is now restricted to updates
			from local addresses. (Previously, other addresses
			were allowed so long as updates were signed by the
			local session key.) [RT #45492]

4761.	[protocol]	Add support for DOA. [RT #45612]

4760.	[func]		Add glue cache statistics counters. [RT #46028]

4759.	[func]		Add logging channel "trust-anchor-telementry" to
			record trust-anchor-telementry in incoming requests.
			Both _ta-XXXX.<anchor>/NULL and EDNS KEY-TAG options
			are logged.  [RT #46124]

4758.	[doc]		Remove documentation of unimplemented "topology".
			[RT #46161]

4757.	[func]		New "dnssec-cds" command creates a new parent DS
			RRset based on CDS or CDNSKEY RRsets found in
			a child zone, and generates either a dsset file
			or stream of nsupdate commands to update the
			parent. Thanks to Tony Finch. [RT #46090]

4756.	[bug]		Interrupting dig could lead to an INSIST failure after
			certain errors were encountered while querying a host
			whose name resolved to more than one address.  Change
			4537 increased the odds of triggering this issue by