@@ -1,0 +1,16 @@
+/*
+ * Copyright (C) 2017  Internet Systems Consortium, Inc. ("ISC")
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this file,
+ * You can obtain one at http://mozilla.org/MPL/2.0/.
+ */
+
+options {
+        directory "./nope";
+        port 5300;
+        pid-file "../named4.pid";
+        listen-on { 127.0.0.1; };
+        listen-on-v6 { none; };
+        recursion no;
+};
