@@ -21,3 +21,13 @@ options {
 	dnssec-enable no;
 	dnssec-validation no;
 };
+
+key rndc_key {
+	secret "1234abcd8765";
+	algorithm hmac-sha256;
+};
+
+controls {
+	inet 10.53.0.2 port 9953 allow { any; } keys { rndc_key; };
+};
+
