@@ -485,6 +485,15 @@
       </listitem>
       <listitem>
 	<para>
+	  <command>named</command> will no longer start or accept
+	  reconfiguration if the working directory (specified by the
+	  <command>directory</command> option) or the managed-keys
+	  directory (specified by <command>managed-keys-directory</command>
+	  are not writable by the effective user ID. [RT #46077]
+	</para>
+      </listitem>
+      <listitem>
+	<para>
 	  Previously, <command>update-policy local;</command> accepted
 	  updates from any source so long as they were signed by the
 	  locally-generated session key. This has been further restricted;
